--- a/app/src/main/res/layout/texts_list.xml
+++ b/app/src/main/res/layout/texts_list.xml
@@ -16,6 +16,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
+        android:gravity="center"
+        android:textSize="@dimen/text_size"
+        android:layout_margin="10dp"
+        android:typeface="monospace"
         android:text="@string/currently_there_are_no_saved_ocr_texts" />
 
 </LinearLayout>
