--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -57,6 +57,7 @@
                 android:summary="@string/bug_rotate_summary"
                 ></CheckBoxPreference>
         </PreferenceCategory>
+
     <PreferenceCategory
         android:title="@string/feedback"
         android:persistent="false">
@@ -75,6 +76,14 @@
             <intent
                 android:action="android.intent.action.VIEW"
                 android:data="mailto:aniruddhastapas@gmail.com"
+                ></intent></Preference>
+
+        <Preference
+            android:title="@string/privacy_policy"
+            android:persistent="false">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="@string/privacy_policy_link"
                 ></intent></Preference>
 
     </PreferenceCategory>
